--- a/index.html
+++ b/index.html
@@ -32,11 +32,62 @@
 <u> Pszczółkowska, </u>
 <strike> 17/35 </strike> 
 <p align="right"> <font color="red" size="9" face="Verdana"> Ulubiony aktor: Robert Lewandowski </font> </p> <br> 
-<center> <font color="blue" size="7" face="Times New Roman"> <p> Ulubiony zespół muzyczny: <font color="green" size="7"> ACDC </p> </center><br>
-<center> <font color="green" size="5" face="Courier New"> <p> data urodzenia: 25 maja 2020 </p> </center><br>
+<center> <font color="blue" size="7" face="Times New Roman"> <p> Ulubiony zespół muzyczny: <font color="green" size="7"> ACDC </p>  </font> </center> </font> <br> 
+<center> <font color="green" size="8" face="Courier New"> <p> data urodzenia: 25 maja 2020 </p> </font> </center><br>
 <p align="left"> <font color="red" size="6" face="Times New Roman">H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
 <p align="left"> <font color="blue" size="5" face="Verdana">x<sup>*</sup>x=x<sup>2</sub> </font> </p> <br>
 
- 
+ <HR SIZE=5 WIDTH=50% ALIGN=center COLOR=green>
+<font color="black" size="6">
+<H3 ALIGN=center> Żart o babie </H3>
+<fieldset> 
+<legend>baba u lekarza</legend>
+Przychodzi baba do lekarza   <br /> 
+a lekarz też baba                    
+</fieldset> 
+<br /> 
+</H3>
+</font>
+<HR SIZE=4 WIDTH=40% ALIGN=center COLOR=red>
+</font> </p> </br>
+
+<font color="black" size="6">
+<H1> Żart o informatyku </H1> 
+<H6 ALIGN=left>
+<fieldset> 
+<legend> przyszły informatyk </legend> 
+Dzieci piszą wypracowanie o tym, jak wyobrażają sobie pracę informatyka.
+Nie pisze tylko Karol. <br>
+- Dlaczego nie piszesz? - pyta go nauczycielka. <br>
+- Czekam, aż mi się otworzy edytor tekstu.   <br>                    
+</fieldset> 
+<br/> 
+</H4>
+</font>
+<HR SIZE=6 WIDTH=80% ALIGN=left COLOR=purple>
+</font> </p> </br>
+
+<font color="black" size="7">
+<H5 ALIGN=right> Żart o lekarzu </H5>
+<fieldset> 
+<legend> dentysta sadysta </legend> 
+-panie doktorze czy ma pan coś na moje zęby?  <br /> 
+-tak,woreczki...                    
+</fieldset> 
+</font> </p> </br>
+
+
+<br /> 
+</H2>
+</font>
+<HR SIZE=4 WIDTH=100% ALIGN=right COLOR=blue>
+
+<!- Skierka, ZSE, 2K-> <!-/->
+
+<body bgcolor="silver"></body> 
+
+<font color="blue" size="5" face="Times New Roman"> Adrian&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skierka </font> </p> </br>
+
+<font color="black" size="4" face="Times New Roman"> &quot; &amp; &lt; &cent; &curren; &yen; &uml; </font> </p> </br>
 
 
