--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
              <title> Adrian Skierka  </title> 
      </head> 
     <body> 
+<A NAME="skok_poczatek"></A>
  Adrian Skierka
 <p align="right"> <font color="blue" size="7" face="Arial"> Adrian </font> </p> <br>
 <p align="right"> <font color="blue" size="6" face="Arial"> Adrian </font> </p> <br>
@@ -33,6 +34,7 @@
 <strike> 17/35 </strike> 
 <p align="right"> <font color="red" size="9" face="Verdana"> Ulubiony aktor: Robert Lewandowski </font> </p> <br> 
 <center> <font color="blue" size="7" face="Times New Roman"> <p> Ulubiony zespół muzyczny: <font color="green" size="7"> ACDC </p>  </font> </center> </font> <br> 
+<A NAME="skok_srodek"></A>
 <center> <font color="green" size="8" face="Courier New"> <p> data urodzenia: 25 maja 2020 </p> </font> </center><br>
 <p align="left"> <font color="red" size="6" face="Times New Roman">H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
 <p align="left"> <font color="blue" size="5" face="Verdana">x<sup>*</sup>x=x<sup>2</sub> </font> </p> <br>
@@ -169,3 +171,18 @@ Nie pisze tylko Karol. <br>
 </OL> 
 </font> </p> </br>
 
+      <!DOCTYPE html>
+                  <html lang="pl-PL">
+                  <html>
+                         <head>
+                              <meta charset="utf-8">
+                             <title> strona poczty</title>
+                      </head>
+                   <body>
+<A HREF="file:///C:/Users/adole/Downloads/poczta_skierka.html"> Link do poczty </A>  </p> </br>
+
+<A HREF="file:///C:/Users/adole/Downloads/plik_skierka.html"> Link do pliku </A> </p> </br>
+
+<a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a> </p> </br>
+
+<a href="#skok_srodek">kliknij aby skoczyć na środek tekstu</a> 
