--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@ Nie pisze tylko Karol. <br>
                              <title> strona poczty</title>
                       </head>
                    <body>
-<A HREF="file:///C:/Users/adole/Downloads/poczta_skierka.html"> Link do poczty </A>  </p> </br>
+<A HREF="poczta_skierka.html"> Link do poczty </A>  </p> </br>
 
-<A HREF="file:///C:/Users/adole/Downloads/plik_skierka.html"> Link do pliku </A> </p> </br>
+<A HREF="plik_skierka.html"> Link do pliku </A> </p> </br>
 
 <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a> </p> </br>
 
