--- a/poczta_skierka.html
+++ b/poczta_skierka.html
@@ -8,7 +8,7 @@
                    <body>
 <A HREF ="adrianskierka@gmail.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh12BW9OOjIO7xKLsFg1Up0YE6X3hlPWDB8A&s" border=0 width=70 height=50> 
 <H1> adrianskierka@gmail.com </H1> <br>
-<A HREF="file:///C:/Users/adole/OneDrive/Pulpit/index.html"> wróć </A>
+<A HREF="index.html"> wróć </A>
 
                   </body>
 </html>
