--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
              <meta charset="utf-8"> 
              <title> Adrian Skierka  </title> 
      </head> 
-    <body> 
+    <body>
+<H1> 
 <A NAME="skok_poczatek"></A>
+
+<A HREF="poczta_skierka.html"> Link do poczty </A>  </p> </br>
+
+<A HREF="plik_skierka.html"> Link do pliku </A> </p> </br>
+
+<a href="#skok_srodek">kliknij aby skoczyć na środek tekstu</a> </p> </br>
+
+<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a> </p> </br>
+
+<A HREF="tabela_skierka.html"> Link do tabeli </A>  </p> </br>
+
+<A HREF="formularz_skierka.html"> Link do formularza </A>  </p> </br> </H1>
+
  Adrian Skierka
 <p align="right"> <font color="blue" size="7" face="Arial"> Adrian </font> </p> <br>
 <p align="right"> <font color="blue" size="6" face="Arial"> Adrian </font> </p> <br>
@@ -33,8 +47,22 @@
 <u> Pszczółkowska, </u>
 <strike> 17/35 </strike> 
 <p align="right"> <font color="red" size="9" face="Verdana"> Ulubiony aktor: Robert Lewandowski </font> </p> <br> 
-<center> <font color="blue" size="7" face="Times New Roman"> <p> Ulubiony zespół muzyczny: <font color="green" size="7"> ACDC </p>  </font> </center> </font> <br> 
+<center> <font color="blue" size="7" face="Times New Roman"> <p> Ulubiony zespół muzyczny: <font color="green" size="7"> ACDC </p>  </font> </center> </font> <br>
+ 
 <A NAME="skok_srodek"></A>
+<H1>
+<A HREF="poczta_skierka.html"> Link do poczty </A>  </p> </br>
+
+<A HREF="plik_skierka.html"> Link do pliku </A> </p> </br>
+
+<a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a> </p> </br>
+
+<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a> </p> </br>
+
+<A HREF="tabela_skierka.html"> Link do tabeli </A>  </p> </br>
+
+<A HREF="formularz_skierka.html"> Link do formularza </A>  </p> </br> </H1>
+
 <center> <font color="green" size="8" face="Courier New"> <p> data urodzenia: 25 maja 2020 </p> </font> </center><br>
 <p align="left"> <font color="red" size="6" face="Times New Roman">H<sub>2</sub>SO<sub>4</sub> </font> </p> <br>
 <p align="left"> <font color="blue" size="5" face="Verdana">x<sup>*</sup>x=x<sup>2</sub> </font> </p> <br>
@@ -106,10 +134,7 @@ Nie pisze tylko Karol. <br>
 
 <font color="black" size="4" face="Times New Roman"> &quot; &amp; &lt; &cent; &curren; &yen; &uml; </font> </p> </br>
 
-<br><br><br> 
-<font color="black" size="6" face="Times New Roman"> <h2> Poniżej są  trzy wyliczenia z różnymi znakami wyliczenia</h2> </font> </p> </br>
 
-<font color="black" size="6" face="Times New Roman"> <h2> ty zaproponuj swoje, związane z informatyką </h2> </font> </p> </br>
 
 <font color="black" size="5" face="Times New Roman"> <h2> Przydatne skróty klawiszowe: </h2> </font> </p> </br>
 
@@ -137,11 +162,6 @@ Nie pisze tylko Karol. <br>
 </LI>
 </font> </p> </br>
 
-<br><br><br> 
-<font color="black" size="6" face="Times New Roman">
-<h2> Poniżej są  trzy numerowania z różnymi znakami numerowania</h2> 
-<h2> ty zaproponuj swoje, związane z informatyką</h2>
-</font> </p> </br>
 
 <font color="black" size="5" face="Times New Roman">
 <h2> Różne złącza oraz ich prędokości: </h2>
@@ -171,18 +191,17 @@ Nie pisze tylko Karol. <br>
 </OL> 
 </font> </p> </br>
 
-      <!DOCTYPE html>
-                  <html lang="pl-PL">
-                  <html>
-                         <head>
-                              <meta charset="utf-8">
-                             <title> strona poczty</title>
-                      </head>
-                   <body>
+     
 <A HREF="poczta_skierka.html"> Link do poczty </A>  </p> </br>
 
 <A HREF="plik_skierka.html"> Link do pliku </A> </p> </br>
 
 <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a> </p> </br>
 
-<a href="#skok_srodek">kliknij aby skoczyć na środek tekstu</a> 
+<a href="#skok_srodek">kliknij aby skoczyć na środek tekstu</a> </p> </br>
+
+<a name="skok_koniec"></a> 
+
+<A HREF="tabela_skierka.html"> Link do tabeli </A>  </p> </br>
+
+<A HREF="formularz_skierka.html"> Link do formularza </A>  </p> </br>
