--- a/poczta_skierka.html
+++ b/poczta_skierka.html
@@ -6,8 +6,9 @@
                              <title> strona poczty</title>
                       </head>
                    <body>
-<A HREF ="adrianskierka@gmail.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh12BW9OOjIO7xKLsFg1Up0YE6X3hlPWDB8A&s" border=0 width=70 height=50> 
-<H1> adrianskierka@gmail.com </H1> <br>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh12BW9OOjIO7xKLsFg1Up0YE6X3hlPWDB8A&s" </p> </br>
+<H1> mój adres email: adrianskierka@gmail.com  <br> 
+<A HREF="https://outlook.live.com"> Kliknij aby przejść do poczty Outlook </A> </p> </br> </H1>
 <A HREF="index.html"> wróć </A>
 
                   </body>
