--- a/poczta_skierka.html
+++ b/poczta_skierka.html
@@ -1,14 +1,14 @@
       <!DOCTYPE html>
-                  <html lang="pl-PL">
-                  <html>
+                  <html lang="pl-PL">      
+                   <html>
                          <head>
                               <meta charset="utf-8">
                              <title> strona poczty</title>
                       </head>
                    <body>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh12BW9OOjIO7xKLsFg1Up0YE6X3hlPWDB8A&s" </p> </br>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh12BW9OOjIO7xKLsFg1Up0YE6X3hlPWDB8A&s" ALT="poczta"> <p> <br>
 <H1> mój adres email: adrianskierka@gmail.com  <br> 
-<A HREF="https://outlook.live.com"> Kliknij aby przejść do poczty Outlook </A> </p> </br> </H1>
+<A HREF="https://outlook.live.com"> Kliknij aby przejść do poczty Outlook </A> <p> <br> </H1>
 <A HREF="index.html"> wróć </A>
 
                   </body>
