--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
 <A HREF="formularz_skierka.html"> Link do formularza </A>  </p> </br> </H1>
 
+<font color="red" size=7> Walidacja stron HTML </font> <font size=5> – to proces sprawdzania, czy kod HTML  jest poprawny i zgodny z obowiązującymi standardami. Walidacja ma na celu wykrycie błędów, takich jak brakujące tagi, niezamknięte elementy, niepoprawne atrybuty, czy też niezgodność z zaleceniami W3C, które ustala standardy dla technologii webowych. </font> <br> <p>
+
+<font color="red" size=7> Walidator </font> <font size=5>– to narzędzie lub program, który automatycznie sprawdza poprawność kodu HTML, CSS lub innych technologii webowych. Walidator porównuje kod strony internetowej z obowiązującymi standardami i zgłasza błędy lub ostrzeżenia. </font> <br> <p>
+
+<H1> <A HREF="walidacja_skierka.html"> Link do walidacji </A>  <p> <br> </H1>
+
  Adrian Skierka
 <p align="right"> <font color="blue" size="7" face="Arial"> Adrian </font> </p> <br>
 <p align="right"> <font color="blue" size="6" face="Arial"> Adrian </font> </p> <br>
