--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
 <font color="red" size=7> Walidator </font> <font size=5>– to narzędzie lub program, który automatycznie sprawdza poprawność kodu HTML, CSS lub innych technologii webowych. Walidator porównuje kod strony internetowej z obowiązującymi standardami i zgłasza błędy lub ostrzeżenia. </font> <br> <p>
 
-<H1> <A HREF="walidacja_skierka.html"> Link do walidacji </A>  <p> <br> </H1>
+<H1> <A HREF="walidacja_skierka.html"> Link do walidacji </A>  </H1>
+
+<IMG SRC="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/800px-HTML5_logo_and_wordmark.svg.png" HEIGHT=200 WIDTH=200> <br>
 
  Adrian Skierka
 <p align="right"> <font color="blue" size="7" face="Arial"> Adrian </font> </p> <br>
